--- a/templates/about.html
+++ b/templates/about.html
@@ -13,9 +13,9 @@
 
     <nav class=" nav flex mx-32 my-2 items-center justify-between">
         <div class="left flex items-center space-x-2 m-2">
-            <img src="../Images/Logo.png" alt="logo">
-            <div class="hover:border hover:px-2 px-2 hover:border-white hover:rounded-full hover:scale-105 hover:bg-yellow-200"> <button><a href="../about/about.html">About</a></button></div>  
-            <a  href="#service1"></a><div class="hover:border hover:px-2 px-2 hover:border-white hover:rounded-full hover:bg-yellow-200">Monitor</div>
+            <a href="./index.html"><img src="../static/Images/Logo.png" alt="logo"></a>
+            <div class="hover:border hover:px-2 px-2 hover:border-white hover:rounded-full hover:scale-105 hover:bg-yellow-200"> <button><a href="../templates/about.html">About</a></button></div>  
+            <a  href="../moniter/index.html"></a><div class="hover:border hover:px-2 px-2 hover:border-white hover:rounded-full hover:bg-yellow-200">Monitor</div>
             <div class="hover:border hover:px-2 px-2 hover:border-white hover:rounded-full hover:scale-105  hover:bg-yellow-200">Detect</div>
             <div class="hover:border hover:px-2 px-2 hover:border-white hover:rounded-full hover:scale-105  hover:bg-yellow-200">Hotspots</div>
             <!-- <div class="hover:border hover:px-2 px-2 hover:border-white hover:rounded-full hover:scale-105  hover:bg-yellow-200">Contacts</div> -->
